# kaivra

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  kaivra.config.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
animations/: binary-search-explainer.json  forward-propagation-explainer-local-voice.json  forward-propagation-explainer.json  forward-propagation-mcp-demo.json  water-cycle-explainer.json
changes/: one-column-semantic-regions.md  relative-positioning.md  semantic-timing.md
docker/: precommit.Dockerfile
docs/: BASELINE.md  LOCAL_MCP.md
docs/backlog/: DSA_EXPLAINER_TODO.md  KAIVRA_EXPLAINER_TODO.md  chatgpt-private-beta-launch-plan.md  kaivra-animation-depth-plan.md  kaivra-check-animation-plan.md  kaivra-discovery-cleanups-plan.md  kaivra-educational-pacing-plan.md  kaivra-first-run-ergonomics-plan.md  kaivra-llm-polish-cleanup-plan.md  kaivra-mcp-authoring-guidance-plan.md  kaivra-visual-first-blueprints-plan.md  kaivra-voice-orchestration-plan.md
examples/: README.md
examples/algorithms/: bubble_sort.json
examples/archived/: llm_inference.json
examples/demos/: agentic_triage.json  bubble_sort_demo.json  semantic_one_column_regions.json
examples/explainers/: agentic_debug_agent_explainer.json  agentic_debug_agent_explainer_with_intro.json  dsa_architecture_explainer.json  kaivra_architecture_explainer.json
examples/local/: README.md
examples/reference/: api_how_it_works.json  forward_propagation.json  perspectiv_medcase_process_explainer.json
examples/themes/: material.json  nvidia.json
scripts/: apply_changesets.py  repo_hygiene.py  run_containerized_tests.sh  run_in_repo_venv.sh
src/dsa_anim/: cli.py
src/dsa_anim/audio/: __init__.py  local_voice.py  timings.py
src/dsa_anim/dsl/: retime.py  schema.py
src/dsa_anim/layout/: engine.py
src/dsa_anim/qa/: __init__.py  audit.py
src/dsa_anim/render/: cairo_renderer.py
src/dsa_anim/scene_graph/: builder.py  models.py  timeline.py
src/dsa_anim/themes/: file_schema.py  loader.py  (+3 more)
src/kaivra/: cli.py  version.py
tests/: conftest.py  test_audio_mux.py  test_audio_timings.py  test_audit.py  test_first_run_cli.py  test_local_voice.py  test_mcp_blueprints.py  test_mcp_server.py  test_mcp_workspace.py  test_pacing.py  test_qa_audit.py  test_render_orchestration.py  test_retime.py  test_scene_graph_timeline.py  test_schema_aliases.py  test_smoke_workflows.py  test_theme_files.py  test_theme_registry.py  test_theme_resolution_cli.py  test_timing_config.py  test_title_opener.py  test_voice_cli.py  test_voice_registry.py
(+50 files in other folders)
