[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaivra"
version = "0.1.0"
description = "Declarative animation engine for LLMs — Typst for animations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "pycairo>=1.25",
    "click>=8.0",
    "Jinja2>=3.0",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
voice = [
    "kaivra-voice>=0.1.0",
]

[project.scripts]
kaivra = "kaivra.cli:main"
kaivra-mcp = "kaivra.mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kaivra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
