[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaivra"
version = "0.1.0"
description = "Declarative animation engine for LLMs — Typst for animations"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "pycairo>=1.25",
    "click>=8.0",
    "Jinja2>=3.0",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=7.0",
    "ruff>=0.11.0",
]
voice = [
    "kaivra-voice>=0.1.0",
]

[project.scripts]
kaivra = "kaivra.cli:main"
kaivra-mcp = "kaivra.mcp.cli:main"

[tool.uv.sources]
kaivra-voice = { path = "packages/kaivra-voice" }

[tool.hatch.build.targets.wheel]
packages = ["src/kaivra"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
markers = [
    "integration: requires optional local voice extras and a downloaded local model bundle",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
